--- a/src/python_testing/matter_testing_infrastructure/BUILD.gn
+++ b/src/python_testing/matter_testing_infrastructure/BUILD.gn
@@ -34,6 +34,7 @@ pw_python_package("chip-testing-module") {
   inputs = [ "env_test.yaml" ]
 
   sources = [
+    "chip.testing.matter_stack_state",
     "chip/testing/__init__.py",
     "chip/testing/apps.py",
     "chip/testing/basic_composition.py",
