--- a/src/data-model-providers/codegen/model.gni
+++ b/src/data-model-providers/codegen/model.gni
@@ -42,5 +42,5 @@ codegen_data_model_PUBLIC_DEPS = [
   "${chip_root}/src/app/server-cluster",
   "${chip_root}/src/data-model-providers/codegen:instance-header",
   "${chip_root}/src/data-model-providers/codegen:registry",
-  "${chip_root}/src/app/util/persistence",
+  "${chip_root}/src/app/persistence",
 ]
