--- a/examples/lighting-app/qpg/BUILD.gn
+++ b/examples/lighting-app/qpg/BUILD.gn
@@ -71,7 +71,7 @@ qpg_executable("lighting_app") {
     "${chip_root}/examples/lighting-app/lighting-common:color-format",
     "${chip_root}/examples/lighting-app/qpg/zap/",
     "${chip_root}/examples/providers:device_info_provider_please_do_not_reuse_as_is",
-    "${chip_root}/src/app/util/persistence:deferred",
+    "${chip_root}/src/app/persistence:deferred",
     "${chip_root}/src/lib",
     "${chip_root}/src/platform/logging:default",
     "${chip_root}/src/setup_payload",
