--- a/src/app/chip_data_model.gni
+++ b/src/app/chip_data_model.gni
@@ -292,7 +292,7 @@ template("chip_data_model") {
       "${chip_root}/src/app/server",
       "${chip_root}/src/app/storage:fabric-table",
       "${chip_root}/src/app/util:types",
-      "${chip_root}/src/app/util/persistence",
+      "${chip_root}/src/app/persistence",
       "${chip_root}/src/lib/core",
       "${chip_root}/src/lib/support",
       "${chip_root}/src/protocols/secure_channel",
