--- a/src/data-model-providers/codegen/model.gni
+++ b/src/data-model-providers/codegen/model.gni
@@ -43,4 +43,5 @@ codegen_data_model_PUBLIC_DEPS = [
   "${chip_root}/src/data-model-providers/codegen:instance-header",
   "${chip_root}/src/data-model-providers/codegen:registry",
   "${chip_root}/src/app/persistence",
+  "${chip_root}/src/app/persistence:default",
 ]
