--- a/src/lib/support/BUILD.gn
+++ b/src/lib/support/BUILD.gn
@@ -211,6 +211,7 @@ static_library("support") {
     "FixedBufferAllocator.cpp",
     "FixedBufferAllocator.h",
     "Fold.h",
+    "FormatUtils.h",
     "FunctionTraits.h",
     "IniEscaping.cpp",
     "IniEscaping.h",
