[CHIME] Updated server and implementations for Chime Cluster Python Test Scripts (#39481)
* Initial commit of python test scripts for the CHIME cluster
Also extends the camera-app to have more than 1 chime value

* Align with planned spec changes

* Restyled by whitespace

* Restyled by prettier-yaml

* Restyled by autopep8

* Restyled by isort

* fix cut and paste errors in text descriptions

* Handle linter errors

* Address review comments

* Fix spelling nit

---------

Co-authored-by: Restyled.io <commits@restyled.io>

--- a/src/python_testing/test_metadata.yaml
+++ b/src/python_testing/test_metadata.yaml
@@ -136,6 +136,8 @@ not_automated:
           are fully verified.
     - name: TC_WEBRTC_Utils.py
       reason: Helper methods for WebRTC TCs, not a standalone test.
+    - name: TC_CHIMETestBase.py
+      reason: Shared code for the Chime Cluster, not a standalone test.
 
 # This is a list of slow tests (just arbitrarily picked around 20 seconds)
 # used in some script reporting for "be patient" messages as well as potentially
