[Camera] Remove delegate APIs from application to cluster server (#39645)
* [Camera] Remove delegate APIs from application to cluster server

* Address review comments

--- a/examples/camera-app/linux/BUILD.gn
+++ b/examples/camera-app/linux/BUILD.gn
@@ -45,6 +45,7 @@ config("config") {
     "include/transport",
     "${chip_root}/examples/camera-app/camera-common/include",
     "${chip_root}/examples/camera-app/camera-common/include/media-controller",
+    "${chip_root}/examples/camera-app/camera-common/include/camera-avstream-controller",
     "${chip_root}/examples/camera-app/camera-common/include/transport",
     "${chip_root}/third_party/libdatachannel/repo/include",
   ]
