--- a/src/app/persistence/BUILD.gn
+++ b/src/app/persistence/BUILD.gn
@@ -16,7 +16,6 @@ import("//build_overrides/chip.gni")
 
 source_set("persistence") {
   sources = [
-    "AttributePersistenceProvider.cpp",
     "AttributePersistenceProvider.h",
     "PascalString.h",
   ]
@@ -25,6 +24,15 @@ source_set("persistence") {
     "${chip_root}/src/app:paths",
     "${chip_root}/src/lib/support:span",
   ]
+}
+
+source_set("singleton") {
+  sources = [
+    "AttributePersistenceProviderInstance.cpp",
+    "AttributePersistenceProviderInstance.h",
+  ]
+
+  public_deps = [ ":persistence" ]
 }
 
 source_set("default") {
