cleanup unwanted change for silabs map file

--- a/examples/lighting-app/silabs/BUILD.gn
+++ b/examples/lighting-app/silabs/BUILD.gn
@@ -215,10 +215,7 @@ silabs_executable("lighting_app") {
 
   inputs = [ ldscript ]
 
-  ldflags = [
-    "-T" + rebase_path(ldscript, root_build_dir),
-    "-Wl,-Map=matter-silabs-lighting-example.map",
-  ]
+  ldflags = [ "-T" + rebase_path(ldscript, root_build_dir) ]
 
   if (chip_print_memory_usage) {
     ldflags += [
