--- a/.github/workflows/update_wise_sdk_submodule.yml
+++ b/.github/workflows/update_wise_sdk_submodule.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v3
         with:
            ref: senscomm
-           submodules: recursive
+           submodules: true
            token: ${{ secrets.PARENT_REPO_TOKEN }} 
 
       - name: Update submodule
