--- a/src/python_testing/test_metadata.yaml
+++ b/src/python_testing/test_metadata.yaml
@@ -123,6 +123,15 @@ not_automated:
     - name: TC_AVSUMTestBase.py
       reason:
           Shared code for Camera AV Settings (TC_AVSUM*), not a standalone test.
+    - name: TC_CLDIM_3_1.py
+      reason: 
+          Closure app on master branch does not support this test script yet.
+    - name: TC_CLDIM_3_2.py
+      reason:
+          Closure app on master branch does not support this test script yet.
+    - name: TC_CLDIM_3_3.py
+      reason:
+          Closure app on master branch does not support this test script yet.
 
 # This is a list of slow tests (just arbitrarily picked around 20 seconds)
 # used in some script reporting for "be patient" messages as well as potentially
