Restyled by prettier-yaml

--- a/src/python_testing/test_metadata.yaml
+++ b/src/python_testing/test_metadata.yaml
@@ -117,11 +117,14 @@ not_automated:
       reason:
           Shared code for Camera AV Settings (TC_AVSUM*), not a standalone test.
     - name: TC_CLDIM_3_1.py
-      reason: Closure app on master branch does not support this test script yet.
+      reason:
+          Closure app on master branch does not support this test script yet.
     - name: TC_CLDIM_3_2.py
-      reason: Closure app on master branch does not support this test script yet.
+      reason:
+          Closure app on master branch does not support this test script yet.
     - name: TC_CLDIM_3_3.py
-      reason: Closure app on master branch does not support this test script yet.
+      reason:
+          Closure app on master branch does not support this test script yet.
     - name: TC_WEBRTC_1_1.py
       reason:
           Depends on Python WebRTC bindings. Will be enabled once local tests
