--- a/src/python_testing/test_metadata.yaml
+++ b/src/python_testing/test_metadata.yaml
@@ -116,14 +116,10 @@ not_automated:
     - name: TC_AVSUMTestBase.py
       reason:
           Shared code for Camera AV Settings (TC_AVSUM*), not a standalone test.
-<<<<<<< Test_Scripts_CLDIM_Step
     - name: TC_CLDIM_4_1.py
-      reason:
-          Closure app on master branch does not support this test script yet.
+      reason: Closure app on master branch does not support this test script yet.
     - name: TC_CLDIM_4_2.py
-      reason:
-          Closure app on master branch does not support this test script yet.
-=======
+      reason: Closure app on master branch does not support this test script yet.
     - name: TC_WEBRTC_1_1.py
       reason:
           Depends on Python WebRTC bindings. Will be enabled once local tests
@@ -148,7 +144,6 @@ not_automated:
       reason: Helper methods for WebRTC TCs, not a standalone test.
     - name: TC_CHIMETestBase.py
       reason: Shared code for the Chime Cluster, not a standalone test.
->>>>>>> master
 
 # This is a list of slow tests (just arbitrarily picked around 20 seconds)
 # used in some script reporting for "be patient" messages as well as potentially
