--- a/src/python_testing/test_metadata.yaml
+++ b/src/python_testing/test_metadata.yaml
@@ -136,6 +136,14 @@ not_automated:
           are fully verified.
     - name: TC_WEBRTC_Utils.py
       reason: Helper methods for WebRTC TCs, not a standalone test.
+    - name: TC_CLCTRL_2_1.py
+      reason: Closure app on master branch does not support this test script yet.
+    - name: TC_CLCTRL_4_2.py
+      reason: Closure app on master branch does not support this test script yet.
+    - name: TC_CLCTRL_4_3.py
+      reason: Closure app on master branch does not support this test script yet.
+    - name: TC_CLCTRL_4_4.py
+      reason: Closure app on master branch does not support this test script yet.
 
 # This is a list of slow tests (just arbitrarily picked around 20 seconds)
 # used in some script reporting for "be patient" messages as well as potentially
