--- a/src/app/clusters/push-av-stream-transport-server/BUILD.gn
+++ b/src/app/clusters/push-av-stream-transport-server/BUILD.gn
@@ -11,5 +11,24 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-group("push-av-stream-transport-server") {
+import("//build_overrides/build.gni")
+import("//build_overrides/chip.gni")
+
+source_set("push-av-stream-transport-server") {
+  sources = [
+    "push-av-stream-transport-delegate.h",
+    "push-av-stream-transport-logic.cpp",
+    "push-av-stream-transport-logic.h",
+    "push-av-stream-transport-server.cpp",
+    "push-av-stream-transport-server.h",
+    "push-av-stream-transport-storage.h",
+  ]
+
+  public_deps = [
+    "${chip_root}/src/app/",
+    "${chip_root}/src/app/server-cluster",
+    "${chip_root}/src/lib/core:types",
+    "${chip_root}/zzz_generated/app-common/clusters/PushAvStreamTransport",
+  ]
+  public_configs = [ "${chip_root}/src:includes" ]
 }
