--- a/config/esp32/components/chip/Kconfig
+++ b/config/esp32/components/chip/Kconfig
@@ -862,13 +862,12 @@ menu "CHIP Device Layer"
                 This feature helps monitor system health and performance by providing insights through diagnostics logs.
 
         config MAX_PERMIT_LIST_SIZE
-            int "Set permit list size for Insights traces"
+            int "Set permit list size for filtered traces"
             range 5 30
             depends on ENABLE_ESP_DIAGNOSTICS_TRACE
             default 20
             help
-                Set the maximum number of group entries that can be included in the permit list for reporting
-                traces to Insights or diagnostics. This ensures proper management of trace reporting capacity.
+                Set the maximum number of group entries that can be included in the permit list for filtering traces.
     endmenu
 
 
