Changes neccessary to add support of new cluster to the example app

--- a/examples/energy-gateway-app/linux/BUILD.gn
+++ b/examples/energy-gateway-app/linux/BUILD.gn
@@ -34,6 +34,8 @@ config("includes") {
 
 executable("chip-energy-gateway-app") {
   sources = [
+    "${chip_root}/examples/energy-gateway-app/commodity-metering/src/CommodityMeteringEventTriggers.cpp",
+    "${chip_root}/examples/energy-gateway-app/commodity-metering/src/CommodityMeteringInstance.cpp",
     "${chip_root}/examples/energy-gateway-app/commodity-price/src/CommodityPriceDelegate.cpp",
     "${chip_root}/examples/energy-gateway-app/commodity-price/src/CommodityPriceEventTriggers.cpp",
     "${chip_root}/examples/energy-gateway-app/commodity-price/src/CommodityPriceMain.cpp",
@@ -69,6 +71,7 @@ executable("chip-energy-gateway-app") {
     "${chip_root}/examples/energy-gateway-app/commodity-price/include",
     "${chip_root}/examples/energy-gateway-app/electrical-grid-conditions/include",
     "${chip_root}/examples/energy-gateway-app/meter-identification/include",
+    "${chip_root}/examples/energy-gateway-app/commodity-metering/include/",
     "${chip_root}/examples/all-clusters-app/all-clusters-common/include",
   ]
 
