--- a/examples/platform/linux/BUILD.gn
+++ b/examples/platform/linux/BUILD.gn
@@ -36,6 +36,7 @@ declare_args() {
   chip_enable_meter_identification_trigger = false
   chip_enable_water_heater_management_trigger = false
   chip_enable_device_energy_management_trigger = false
+  chip_enable_commodity_metering_trigger = false
 }
 
 config("app-main-config") {
@@ -92,6 +93,10 @@ source_set("device-energy-management-test-event-trigger") {
   sources = [ "${chip_root}/src/app/clusters/device-energy-management-server/DeviceEnergyManagementTestEventTriggerHandler.h" ]
 }
 
+source_set("commodity-metering-test-event-trigger") {
+  sources = [ "${chip_root}/src/app/clusters/commodity-metering-server/CommodityMeteringTestEventTriggerHandler.h" ]
+}
+
 source_set("app-main") {
   defines = [
     "ENABLE_TRACING=${matter_enable_tracing_support}",
@@ -118,6 +123,7 @@ source_set("app-main") {
   public_deps = [
     ":boolean-state-configuration-test-event-trigger",
     ":commissioner-main",
+    ":commodity-metering-test-event-trigger",
     ":commodity-price-test-event-trigger",
     ":device-energy-management-test-event-trigger",
     ":electrical-grid-conditions-test-event-trigger",
@@ -185,6 +191,7 @@ source_set("app-main") {
     "CHIP_DEVICE_CONFIG_ENABLE_WATER_HEATER_MANAGEMENT_TRIGGER=${chip_enable_water_heater_management_trigger}",
     "CHIP_DEVICE_CONFIG_ENABLE_WIFI_DIAGNOSTIC_TRIGGER=${chip_enable_wifi_diagnostics_trigger}",
     "CHIP_DEVICE_CONFIG_ENABLE_DEVICE_ENERGY_MANAGEMENT_TRIGGER=${chip_enable_device_energy_management_trigger}",
+    "CHIP_DEVICE_CONFIG_ENABLE_COMMODITY_METERING_TRIGGER=${chip_enable_commodity_metering_trigger}",
   ]
 
   public_configs = [ ":app-main-config" ]
