Update generic fault test event trigger handler and infineon implementation

--- a/examples/platform/infineon/cyw30739/BUILD.gn
+++ b/examples/platform/infineon/cyw30739/BUILD.gn
@@ -30,6 +30,7 @@ static_library("platform") {
   public_configs = [ ":${target_name}-config" ]
 
   deps = [
+    "${chip_root}/src/app/clusters/general-diagnostics-server:general-diagnostics-server",
     "${chip_root}/src/app:generic-test-event-trigger-handler",
     app_data_model,
   ]
