--- a/src/app/BUILD.gn
+++ b/src/app/BUILD.gn
@@ -490,6 +490,7 @@ source_set("generic-test-event-trigger-handler") {
   public_deps = [
     ":test-event-trigger",
     "${chip_root}/src/platform",
+    "${chip_root}/src/app/clusters/general-diagnostics-server:general-diagnostics-server",
   ]
 }
 
