--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -77,6 +77,7 @@ if (chip_build_tests) {
       "${chip_root}/src/transport/retransmit/tests",
       "${chip_root}/src/transport/tests",
       "${chip_root}/src/tracing/esp32_diagnostic_trace/tests",
+      "${chip_root}/src/app/clusters/push-av-stream-transport-server/tests",
     ]
 
     # Skip DNSSD tests for Mbed platform due to flash memory size limitations
