--- a/src/app/clusters/push-av-stream-transport-server/tests/BUILD.gn
+++ b/src/app/clusters/push-av-stream-transport-server/tests/BUILD.gn
@@ -21,9 +21,10 @@ import("${chip_root}/build/chip/chip_test_suite.gni")
 chip_test_suite("tests") {
   output_name = "libTestPushAVStreamTransport"
 
-  test_sources = [ "TestPushAVStreamTransportCluster.cpp",
-                   "TestPushAVStreamTransportStorage.cpp",
-                   ]
+  test_sources = [
+    "TestPushAVStreamTransportCluster.cpp",
+    "TestPushAVStreamTransportStorage.cpp",
+  ]
 
   sources = []
 
