mypy compliance for choice_conformance.py and commissioning.py (#38669)
* fixing 5 mypy errors

* fix mypy issues in commissioning.py

* update the gh action

* fix type hint to align the type definitions with the actual usage and parsing logic, and resolve the mypy error

* fix gh action

* review comments

* lint code

* restyle

* use Mobly assertions but keep type assertions for mypy

* autopep format

--- a/.github/workflows/mypy-validation.yml
+++ b/.github/workflows/mypy-validation.yml
@@ -58,6 +58,8 @@ jobs:
             src/python_testing/matter_testing_infrastructure/chip/testing/tasks.py \
             src/python_testing/matter_testing_infrastructure/chip/testing/taglist_and_topology_test.py \
             src/python_testing/matter_testing_infrastructure/chip/testing/pics.py \
+            src/python_testing/matter_testing_infrastructure/chip/testing/choice_conformance.py \
+            src/python_testing/matter_testing_infrastructure/chip/testing/commissioning.py \
             src/python_testing/matter_testing_infrastructure/chip/testing/decorators.py \
             src/python_testing/matter_testing_infrastructure/chip/testing/basic_composition.py"
           
