Address review comments.
Signed-off-by: Raveendra Karu <r.karu@samsung.com>

--- a/src/controller/BUILD.gn
+++ b/src/controller/BUILD.gn
@@ -119,7 +119,7 @@ static_library("controller") {
 
   cflags = [ "-Wconversion" ]
   if (chip_support_webrtc_python_bindings && current_os == "linux" &&
-      (current_cpu == "x64" || current_cpu == "armv64")) {
+      (current_cpu == "x64" || current_cpu == "arm64")) {
     public_deps += [ "${chip_root}/src/controller/webrtc:chip_webrtc" ]
   }
 
