--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -641,14 +641,16 @@ jobs:
                   build --copy-artifacts-to objdir-clone
                   && rm -rf out/linux-x64-python-bindings"
 
-            - name: Build linux-x64-python-bindings
+            # TODO: JS admin app app needs variants (probably)
+            - name: Build linux-x64-jf-control-app
               run: >-
                   ./scripts/run_in_build_env.sh "./scripts/build/build_examples.py
                   --target linux-x64-jf-control-app
                   build --copy-artifacts-to objdir-clone
                   && rm -rf out/linux-x64-jf-control-app"
 
-            - name: Build linux-x64-python-bindings
+            # TODO: JF admin app app needs variants (probably)
+            - name: Build linux-x64-jf-admin-app
               run: >-
                   ./scripts/run_in_build_env.sh "./scripts/build/build_examples.py
                   --target linux-x64-jf-admin-app
@@ -659,7 +661,7 @@ jobs:
             - name: Generate an argument environment file
               # GitHub VM remains out of memory after adding Joint Fabrics example apps to be built.
               # Add as a temporary fix the removal of out/ folders for JF apps and use artifacts from objdir-clone (see step above) as .o files are no longer requred.
-              # Maybe do this for all apps. 
+              # Maybe do this for all apps.
               run: |
                   echo -n "" >/tmp/test_env.yaml
                   echo "ALL_CLUSTERS_APP: objdir-clone/linux-x64-all-clusters-${BUILD_VARIANT}-tsan-clang-test/chip-all-clusters-app" >> /tmp/test_env.yaml
