Add  accessor class to access  private member of  for testing  without BLE Transport

--- a/src/ble/tests/BUILD.gn
+++ b/src/ble/tests/BUILD.gn
@@ -21,12 +21,13 @@ chip_test_suite("tests") {
   output_name = "libBleLayerTests"
 
   test_sources = [
-    "BleLayerAccess.h",
     "TestBleErrorStr.cpp",
     "TestBleLayer.cpp",
     "TestBleUUID.cpp",
     "TestBtpEngine.cpp",
   ]
+
+  sources = [ "BleLayerAccess.h" ]
 
   cflags = [ "-Wconversion" ]
 
