Add unit test for `NewConnectionByDoscriminators` function connection completes succesfully

--- a/src/ble/tests/BUILD.gn
+++ b/src/ble/tests/BUILD.gn
@@ -27,7 +27,7 @@ chip_test_suite("tests") {
     "TestBtpEngine.cpp",
   ]
 
-  sources = [ "BleLayerAccess.h" ]
+  sources = [ "BleLayerTestAccess.h" ]
 
   cflags = [ "-Wconversion" ]
 
