--- a/.github/workflows/chef.yaml
+++ b/.github/workflows/chef.yaml
@@ -131,9 +131,9 @@ jobs:
               uses: ./.github/actions/checkout-submodules-and-bootstrap
               with:
                 platform: telink
-            # - name: Update Zephyr to specific revision (for developers purpose)
-            #   shell: bash
-            #   run: scripts/run_in_build_env.sh "python3 scripts/tools/telink/update_zephyr.py 050e732c8ba66ece6058aac1591508e0e3510729"
+            - name: Update Zephyr to specific revision (for developers purpose)
+              shell: bash
+              run: scripts/run_in_build_env.sh "python3 scripts/tools/telink/update_zephyr.py 68194e5ec7d9852e59b696224e49186152104b3a"
             - name: CI Examples Telink
               shell: bash
               run: |
