--- a/.github/workflows/examples-telink.yaml
+++ b/.github/workflows/examples-telink.yaml
@@ -57,8 +57,8 @@ jobs:
               with:
                 gh-context: ${{ toJson(github) }}
 
-            # - name: Update Zephyr version 4.1.0 (develop) to specific revision (for developers purpose)
-            #   run: scripts/run_in_build_env.sh "python3 scripts/tools/telink/update_zephyr.py 050e732c8ba66ece6058aac1591508e0e3510729"
+            - name: Update Zephyr version 4.1.0 (develop) to specific revision (for developers purpose)
+              run: scripts/run_in_build_env.sh "python3 scripts/tools/telink/update_zephyr.py 68194e5ec7d9852e59b696224e49186152104b3a"
 
             - name: Build tools required for Factory Data
               # Run test for master and all PRs
@@ -404,8 +404,8 @@ jobs:
               with:
                 gh-context: ${{ toJson(github) }}
 
-            # - name: Update Zephyr version 3.3.0 (develop_3.3) to specific revision (for developers purpose)
-            #   run: scripts/run_in_build_env.sh "python3 scripts/tools/telink/update_zephyr.py 5a53841781b3be928f599e8fcc1f4ad80c83523b"
+            - name: Update Zephyr version 3.3.0 (develop_3.3) to specific revision (for developers purpose)
+              run: scripts/run_in_build_env.sh "python3 scripts/tools/telink/update_zephyr.py 68194e5ec7d9852e59b696224e49186152104b3a"
 
             - name: Build tools required for Factory Data
               # Run test for master and all PRs
