--- a/src/python_testing/test_metadata.yaml
+++ b/src/python_testing/test_metadata.yaml
@@ -17,6 +17,8 @@ not_automated:
       reason: Camera App does not support all features required for this TC
     - name: TC_AVSM_2_11.py
       reason: Camera App does not support all features required for this TC
+    - name: TC_CLCTRL_3_1.py
+      reason: Closure app on the master branch does not support this.
     - name: TC_CNET_4_2.py
       reason: It has no CI execution block, it not executed in CI
     - name: TC_CNET_4_1.py
