--- a/src/app/clusters/commodity-tariff-server/app_config_dependent_sources.gni
+++ b/src/app/clusters/commodity-tariff-server/app_config_dependent_sources.gni
@@ -12,6 +12,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 app_config_dependent_sources = [
+  "CommodityTariffAttrsDataMgmt.cpp",
+  "CommodityTariffAttrsDataMgmt.h",
   "CommodityTariffTestEventTriggerHandler.h",
   "commodity-tariff-server.cpp",
   "commodity-tariff-server.h",
