--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -52,6 +52,14 @@
             "cwd": "${workspaceFolder}"
         },
         {
+            "name": "Run application Energy-Gtw-Sample (Darwin arm64)",
+            "type": "lldb",
+            "request": "launch",
+            "program": "${workspaceFolder}/out/darwin-arm64-energy-gateway/chip-energy-gateway-app",
+            "args": ["--enable-key", "00112233445566778899aabbccddeeff"],
+            "cwd": "${workspaceFolder}/examples/energy-gateway-app"
+        },
+        {
             "name": "Run application (Linux x64)",
             "type": "cppdbg",
             "request": "launch",
