--- a/.github/workflows/chef.yaml
+++ b/.github/workflows/chef.yaml
@@ -100,7 +100,7 @@ jobs:
         if: github.actor != 'restyled-io[bot]'
 
         container:
-            image: ghcr.io/project-chip/chip-build-nrf-platform:146
+            image: ghcr.io/project-chip/chip-build-nrf-platform:143
             options: --user root
 
         steps:
@@ -131,9 +131,9 @@ jobs:
               uses: ./.github/actions/checkout-submodules-and-bootstrap
               with:
                 platform: telink
-            - name: Update Zephyr to specific revision (for developers purpose)
-              shell: bash
-              run: scripts/run_in_build_env.sh "python3 scripts/tools/telink/update_zephyr.py 68194e5ec7d9852e59b696224e49186152104b3a"
+            # - name: Update Zephyr to specific revision (for developers purpose)
+            #   shell: bash
+            #   run: scripts/run_in_build_env.sh "python3 scripts/tools/telink/update_zephyr.py 68194e5ec7d9852e59b696224e49186152104b3a"
             - name: CI Examples Telink
               shell: bash
               run: |
